--- a/source/pages/4_inner/4_inner.pug
+++ b/source/pages/4_inner/4_inner.pug
@@ -2,7 +2,7 @@ extends ../base
 block title
   |Fontsly
 block main
-  main.main
+  main.main.is-4-inner
     div.container
       div.title-head
         h1 Submit a font
