--- a/source/pages/4_inner/4_inner.pug
+++ b/source/pages/4_inner/4_inner.pug
@@ -43,7 +43,7 @@ block main
               div.request__download
                 label
                   span Choose File
-                  input(type='file' id='input-file')
+                  input(type='file' id='input-font')
                 span.request__file-selected no file selected
             div.request__item
               label.request__label Recommended theme:
@@ -72,10 +72,10 @@ block main
               textarea.textarea.small
             div.request__item
               label.request__label Illustration:
-              idiv.request__download
+              div.request__download
                 label
                   span Choose File
-                  input(type='file' id='#')
+                  input(type='file' id='input-illustration')
                 span.request__file-selected no file selected
               span.request__tip very optional - max width:800px
             div.request__text
