--- a/source/pages/main/main.pug
+++ b/source/pages/main/main.pug
@@ -131,9 +131,6 @@ block main
               input(type='reset' value='clear').btn
             div.pagination
               ul.pagination__list
-                li.pagination__el
-                  a.pagination__link(href='#', title='Previous page')
-                    span.icon.is-arrow-left
                 li.pagination__el.is-active
                   a.pagination__link(href='#') 1
                 li.pagination__el
@@ -142,6 +139,18 @@ block main
                   a.pagination__link(href='#') 3
                 li.pagination__el
                   a.pagination__link(href='#') 4
+                li.pagination__el
+                  a.pagination__link(href='#') 5
+                li.pagination__el
+                  a.pagination__link(href='#') 6
+                li.pagination__el
+                  a.pagination__link(href='#') 7
+                li.pagination__el
+                  a.pagination__link(href='#') 8
+                li.pagination__el
+                  a.pagination__link(href='#') 9
+                li.pagination__el
+                  a.pagination__link(href='#') 10
                 li.pagination__el
                   a.pagination__link(href='#') ...
                 li.pagination__el
@@ -162,8 +171,7 @@ block main
               span in <a href='#' class='font-script__link'>Script</a> <a href='#' class='font-script__link'>Calligraphy</a>
           div.font__content
             div.font-logo
-              a.font-logo__link(href='#')
-                img.font-logo__img(src=require('../../media/font.png'))
+              img.font-logo__img(src=require('../../media/font.png'))
             div.font-download
               div.quatity
                 span.quatity__sum 139,773 downloads
@@ -180,8 +188,7 @@ block main
               span in <a href='#' class='font-script__link'>Script</a> <a href='#' class='font-script__link'>Calligraphy</a>
           div.font__content
             div.font-logo
-              a.font-logo__link(href='#')
-                img.font-logo__img(src=require('../../media/font2.png'))
+              img.font-logo__img(src=require('../../media/font2.png'))
             div.font-download
               div.quatity
                 span.quatity__sum 1,123 downloads
@@ -200,8 +207,7 @@ block main
               span in <a href='#' class='font-script__link'>Script</a> <a href='#' class='font-script__link'>Calligraphy</a>
           div.font__content
             div.font-logo
-              a.font-logo__link(href='#')
-                img.font-logo__img(src=require('../../media/font3.png'))
+              img.font-logo__img(src=require('../../media/font3.png'))
             div.font-download
               div.quatity
                 span.quatity__sum 17,585 downloads
@@ -218,8 +224,7 @@ block main
               span in <a href='#' class='font-script__link'>Script</a> <a href='#' class='font-script__link'>Calligraphy</a>
           div.font__content
             div.font-logo
-              a.font-logo__link(href='#')
-                img.font-logo__img(src=require('../../media/font4.png'))
+              img.font-logo__img(src=require('../../media/font4.png'))
             div.font-download
               div.quatity
                 span.quatity__sum 1,123 downloads
@@ -243,6 +248,18 @@ block main
                 a.pagination__link(href='#') 3
               li.pagination__el
                 a.pagination__link(href='#') 4
+              li.pagination__el
+                a.pagination__link(href='#') 5
+              li.pagination__el
+                a.pagination__link(href='#') 6
+              li.pagination__el
+                a.pagination__link(href='#') 7
+              li.pagination__el
+                a.pagination__link(href='#') 8
+              li.pagination__el
+                a.pagination__link(href='#') 9
+              li.pagination__el
+                a.pagination__link(href='#') 10
               li.pagination__el
                 a.pagination__link(href='#') ...
               li.pagination__el
