--- a/source/styles/colorpicker.sass
+++ b/source/styles/colorpicker.sass
@@ -17,3 +17,22 @@
     height: 32px
     border: 1px solid $borderGrey
     cursor: pointer
+
+.minicolors
+  padding-right: 40px
+  height: 32px
+
+  .minicolors-input
+    padding-left: 10px!important
+    padding-right: 10px!important
+    width: 90px
+    height: 32px
+
+  .minicolors-swatch
+    left: initial
+    top: 0
+    right: 0
+    padding: 2px
+    width: 32px
+    height: 32px
+    border: 1px solid $borderGrey
