--- a/source/styles/filters.sass
+++ b/source/styles/filters.sass
@@ -22,6 +22,7 @@
 
   &__form
     display: flex
+    justify-content: space-between
     align-items: center
 
   &__btn
@@ -31,7 +32,6 @@
       margin-right: 6px
       color: $text
       font-size: 14px
-      font-family: $f-opensans-regular
       width: 80px
       height: 32px
       line-height: 32px
