--- a/source/styles/font-title.sass
+++ b/source/styles/font-title.sass
@@ -3,7 +3,7 @@
   &__link
     margin-right: 5px
     font-size: 14px
-    font-family: $f-opensans-semibold
+    font-weight: 600
 
   &__author
     margin-right: 7px
