--- a/source/styles/note.sass
+++ b/source/styles/note.sass
@@ -5,7 +5,7 @@
   border-left: 4px solid $borderGrey
 
   span
-    font-family: $f-opensans-semibold
+    font-weight: 600
 
   p
     margin-bottom: 17px
