--- a/source/styles/pagination.sass
+++ b/source/styles/pagination.sass
@@ -5,11 +5,14 @@
     display: inline-flex
 
   &__el
-    margin: 0 2px
+    margin-left: 9px
+    //margin: 0 5px
 
     &.is-active
       border: 1px solid $textLink
+
       a
+        padding: 0 10px
         color: $textLink
 
     &:hover
@@ -31,8 +34,6 @@
     position: relative
     display: flex
     align-items: center
-    padding: 0 11px
-    margin: 0
     height: 32px
     line-height: 32px
     color: $text
