--- a/source/styles/radio.sass
+++ b/source/styles/radio.sass
@@ -4,7 +4,7 @@
     display: inline-block
     margin-bottom: 10px
     font-size: 15px
-    font-family: $f-opensans-semibold
+    font-weight: 600
 
   &__item
     margin-bottom: 5px
