--- a/source/pages/1_inner/1_inner.pug
+++ b/source/pages/1_inner/1_inner.pug
@@ -30,11 +30,7 @@ block main
                 option(value='m' selected) Medium
                 option(value='l') Large
             div.colorpicker
-              input.colorpicker__input(placeholder='HEX Color' type="text" pattern="^#+([a-fA-F0-9]{6}|[a-fA-F0-9]{3})$" id="hexcolor" size='7')
-              input.colorpicker__box(type="color" id="colorpicker" name="color" pattern="^#+([a-fA-F0-9]{6}|[a-fA-F0-9]{3})$" value="#000000")
-            //div.colorpicker
-            //  input.colorpicker__input(placeholder='HEX Color' type='text' size='7')
-            //  span.colorpicker__box
+              input.colorpicker__input.minicolors(placeholder='HEX Color' size='7')
             div.filters__btn
               input(type='submit' value='Update').btn
               input(type='reset' value='Clear').btn
@@ -56,8 +52,7 @@ block main
               span in <a href='#' class='font-script__link'>in Basic</a> <a href='#' class='font-script__link'>Sans serif</a>
           div.font__content
             div.font-logo
-              a.font-logo__link(href='#')
-                img.font-logo__img(src=require('../../media/font5.png'))
+              img.font-logo__img(src=require('../../media/font5.png'))
             div.font-download
               div.quatity
                 span.quatity__sum 139,773 downloads
