--- a/source/pages/base.pug
+++ b/source/pages/base.pug
@@ -55,55 +55,6 @@
   { title: 'Submit a font', link: '#' }
   ]
 
-  const menuListMain = [
-    {
-      title: 'Group 1',
-      link: '#',
-      fonts: [
-        { title: 'Font 1', link: '#' },
-        { title: 'Font 2', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' }
-      ]
-    },
-    {
-      title: 'Group 2',
-      link: '#',
-      fonts: [
-        { title: 'Font 1', link: '#' },
-        { title: 'Font 2', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' },
-        { title: 'Font 3', link: '#' }
-      ]
-    }
-  ]
-
 doctype html
 html
   head
@@ -111,6 +62,7 @@ html
     meta(name='viewport', content='initial-scale=1.0, width=device-width')
     base(target="_blank")
     meta(name="description" content="Pioneering Private Digital Transactions")
+    link(href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap" rel="stylesheet")
     title
       block title
   body
