--- a/source/styles/alphabet.sass
+++ b/source/styles/alphabet.sass
@@ -25,7 +25,7 @@
     background-color: transparent
     transition: all .3s ease-in-out
     font-size: 16px
-    font-family: $f-opensans-semibold
+    font-weight: 600
     letter-spacing: -.5px
     text-transform: uppercase
     text-decoration: none
