--- a/source/styles/base.sass
+++ b/source/styles/base.sass
@@ -7,17 +7,17 @@ body
   flex-direction: column
   font-size: 14px
   color: $text
+  font-family: 'Open Sans', sans-serif
+  font-weight: 400
   letter-spacing: -0.1px
   box-sizing: border-box
-  font-family: $f-opensans-regular
 
 h1
   font-size: 26px
-  font-family: $f-opensans-regular
 
 h2
   font-size: 18px
-  font-family: $f-opensans-semibold
+  font-weight: 600
 
 ul
   list-style: none
