--- a/source/styles/btn.sass
+++ b/source/styles/btn.sass
@@ -6,7 +6,7 @@
   height: 38px
   line-height: 38px
   font-size: 15px
-  font-family: $f-opensans-semibold
+  font-weight: 600
   transition: $transition
   color: #fff
   background-color: $textLink
@@ -30,7 +30,7 @@
     height: 44px
     line-height: 44px
     border-radius: 22px
-    font-family: $f-opensans-semibold
+    font-weight: 600
     font-size: 15px
     transition: $transition
 
@@ -42,4 +42,3 @@
     height: 32px
     line-height: 32px
     font-size: 14px
-    font-family: $f-opensans-regular
