--- a/source/styles/request.sass
+++ b/source/styles/request.sass
@@ -80,7 +80,7 @@
     display: inline-block
     margin-bottom: 6px
     font-size: 15px
-    font-family: $f-opensans-semibold
+    font-weight: 600
 
   .search
     margin-bottom: 20px
