--- a/source/pages/4_inner/4_inner.pug
+++ b/source/pages/4_inner/4_inner.pug
@@ -79,7 +79,7 @@ block main
                 span.request__file-selected no file selected
               span.request__tip very optional - max width:800px
             div.request__text
-              p If possible in PNG (why PNG?) and not JPG.
+              p If possible in PNG (<a href='#'>why PNG?</a>) and not JPG.
               p Graphics with solid backgrounds saved in JPG will be rejected. JPGs converted in PNG will be rejected as well, you must export to PNG the original, undamaged file.
           div.request__btn
             button(type='submit').btn.small Submit
