--- a/source/pages/main/main.pug
+++ b/source/pages/main/main.pug
@@ -127,8 +127,8 @@ block main
               input.colorpicker__input(placeholder='HEX Color' type="text" pattern="^#+([a-fA-F0-9]{6}|[a-fA-F0-9]{3})$" id="hexcolor" size='7')
               input.colorpicker__box(type="color" id="colorpicker" name="color" pattern="^#+([a-fA-F0-9]{6}|[a-fA-F0-9]{3})$" value="#000000")
             div.filters__btn
-              input(type='submit' value='update').btn
-              input(type='reset' value='clear').btn
+              input(type='submit' value='Update').btn
+              input(type='reset' value='Clear').btn
             div.pagination
               ul.pagination__list
                 li.pagination__el.is-active
