--- a/source/styles/filters.sass
+++ b/source/styles/filters.sass
@@ -36,6 +36,7 @@
       height: 32px
       line-height: 32px
       background-color: $bgGrey
+      font-weight: 400
       cursor: pointer
 
       &:last-child
