--- a/source/styles/request.sass
+++ b/source/styles/request.sass
@@ -75,6 +75,12 @@
     padding-left: 170px
     font-size: 10px
     color: $textGrey
+    a
+      color: $textGrey
+      text-decoration: underline
+
+    a:hover
+      color: $textLink
 
   &__title
     display: inline-block
