--- a/source/styles/fonts.sass
+++ b/source/styles/fonts.sass
@@ -1,5 +1,11 @@
 .fonts
 
+  &__content
+    display: none
+
+    &.is-active
+      display: block
+
   &__pagination
     display: flex
     justify-content: space-between
