--- a/source/styles/select.sass
+++ b/source/styles/select.sass
@@ -6,6 +6,7 @@
   line-height: 32px
   border: 1px solid $borderGrey
   border-radius: 0
+  cursor: pointer
 
   &::after
     position: absolute
@@ -18,6 +19,7 @@
     border-style: solid
     border-width: 4px 4px 0 4px
     border-color: $text transparent transparent transparent
+    z-index: -1
 
   select
     display: inline-block
