--- a/source/styles/categories-block.sass
+++ b/source/styles/categories-block.sass
@@ -8,7 +8,7 @@
     justify-content: space-between
     min-height: 370px
     padding-top: 20px
-    padding-bottom: 10px
+    padding-bottom: 50px
     background-color: #fff
     box-sizing: border-box
 
@@ -19,5 +19,9 @@
     flex-wrap: wrap
 
   &__bottom
+    position: absolute
+    left: 0
+    bottom: 10px
+    width: 100%
     padding: 10px 20px 0 20px
     border-top: 1px solid $borderGrey
