--- a/source/styles/font.sass
+++ b/source/styles/font.sass
@@ -22,7 +22,7 @@
       width: 100%
 
       &__link
-        display: block
+        display: inline-block
 
     .font-download
       position: absolute
